force-app/main/default/objects/EntityChangeType__c/EntityChangeType__c.object-meta.xml
<CustomObject>
    <label>Entity Change Type</label>
    <nameField>
        <displayFormat>ECT-{00000}</displayFormat>
        <label>Entity Change Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entity Change Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>