force-app/main/default/objects/EntityChangeType__c/fields/ConditionField__c.field-meta.xml
<CustomField>
    <fullName>ConditionField__c</fullName>
    <label>Condition Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>