force-app/main/default/objects/EntityChangeType__c/fields/EntityExecutionOrder__c.field-meta.xml
<CustomField>
    <fullName>EntityExecutionOrder__c</fullName>
    <label>Entity Execution Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>