force-app/main/default/objects/EntityChangeType__c/fields/EntityHistoryObject__c.field-meta.xml
<CustomField>
    <fullName>EntityHistoryObject__c</fullName>
    <label>Entity History Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>