force-app/main/default/objects/EntityChangeType__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>ChangeType__c</columns>
    <columns>Entity__c</columns>
    <columns>Field__c</columns>
    <columns>ConditionField__c</columns>
    <columns>EntityHistoryObject__c</columns>
    <columns>NAME</columns>
    <columns>UniqueKey__c</columns>
    <columns>Value__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>